Changes in project

--- a/HappyMeals/HappyMeals_Update01_HTMLCSS/booking.html
+++ b/HappyMeals/HappyMeals_Update01_HTMLCSS/booking.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>Booking | Happy Meals</title>
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./globalreset.css" />
     <link rel="stylesheet" href="./globalStyles.css" />
     <link rel="stylesheet" href="./components.css" />
     <!-- aos library css  -->
@@ -117,7 +117,7 @@
             <div class="form__group">
               <label for="placement">Placement</label>
               <select name="Placement" id="placement">
-                <option selected disabled>Choose</option>
+                <option selected disabled>-- Select --</option>
                 <option value="outdoor">Outdoor</option>
                 <option value="indoor">Indoor</option>
                 <option value="rooftop">rooftop</option>
@@ -150,8 +150,7 @@
               <img src="./images/Logo01.png" class="logo" alt="Happy Meals" />
             </div>
             <p class="footer__desc">
-              Fresh and delicious traditional Indian food to delight the whole
-              family.
+              Fresh and delicious traditional foods to delight the whole family.
             </p>
             <div class="footer__socials">
               <h4 class="footer__socials__title">Follow us</h4>
@@ -239,22 +238,19 @@
               <li>
                 <a href="./contact.html">contact Us</a>
               </li>
-              <li>
-                <a href="#">Privacy Policy</a>
-              </li>
             </ol>
           </div>
           <div class="footer__col3">
             <h3 class="footer__text__title">Support</h3>
             <ol class="footer__text">
               <li>
-                <a href="#">Contact</a>
+                <a href="./contact.html">Contact</a>
               </li>
               <li>
-                <a href="#">Support Center</a>
+                <a href="./support.html">Support Center</a>
               </li>
               <li>
-                <a href="#">Feedback</a>
+                <a href="./feedback.html">Feedback</a>
               </li>
             </ol>
           </div>
@@ -268,7 +264,7 @@
                 <a href="#">happymeals@gmail.com</a>
               </li>
               <li>
-                <a href="#">118 102 Cope Crescent, Saskatoon, SK- S7T 0X3</a>
+                <a href="#">102 Cope Crescent, Saskatoon, SK- S7T 0X3</a>
               </li>
             </ol>
           </div>
