--- a/HappyMeals/HappyMeals_Update01_HTMLCSS/menu.html
+++ b/HappyMeals/HappyMeals_Update01_HTMLCSS/menu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>Menu | Happy Meals</title>
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./globalreset.css" />
     <link rel="stylesheet" href="./globalStyles.css" />
     <link rel="stylesheet" href="./components.css" />
     <!-- aos library css  -->
@@ -95,7 +95,7 @@
             </div>
             <div class="ourSpecials__item__info">
               <h3 class="ourSpecials__item__title">Sweet Potato Fries Bowl</h3>
-              <h4 class="ourSpecials__item__price">$12</h4>
+              <h4 class="ourSpecials__item__price">$10</h4>
               <div class="ourSpecials__item__stars">
                 <img src="./images/3star.png" alt="3 stars" />
               </div>
@@ -467,22 +467,19 @@
               <li>
                 <a href="./contact.html">contact Us</a>
               </li>
-              <li>
-                <a href="#">Privacy Policy</a>
-              </li>
             </ol>
           </div>
           <div class="footer__col3">
             <h3 class="footer__text__title">Support</h3>
             <ol class="footer__text">
               <li>
-                <a href="#">Contact</a>
+                <a href="./contact.html">Contact</a>
               </li>
               <li>
-                <a href="#">Support Center</a>
+                <a href="./support.html">Support Center</a>
               </li>
               <li>
-                <a href="#">Feedback</a>
+                <a href="./feedback.html">Feedback</a>
               </li>
             </ol>
           </div>
@@ -496,7 +493,7 @@
                 <a href="#">happymeals@gmail.com</a>
               </li>
               <li>
-                <a href="#">118 102 Cope Crescent, Saskatoon, SK- S7T 0X3</a>
+                <a href="#">102 Cope Crescent, Saskatoon, SK- S7T 0X3</a>
               </li>
             </ol>
           </div>
