--- a/HappyMeals/HappyMeals_Update01_HTMLCSS/index.html
+++ b/HappyMeals/HappyMeals_Update01_HTMLCSS/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>Home | Happy Meals</title>
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./globalreset.css" />
     <link rel="stylesheet" href="./globalStyles.css" />
     <link rel="stylesheet" href="./components.css" />
     <!-- aos library css  -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Add your custom css -->
-    <link rel="stylesheet" href="./home.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
 
   <body>
@@ -265,7 +265,6 @@
       <div class="container">
         <div class="eventsMedia__wrapper">
           <div class="eventsMedia__1">
-            
             <img src="./images/eventsMedia1.png" alt="events" />
             <a href="#" class="eventsMedia__1__playButton">
               <img src="./images/playIcon.svg" alt="play button" />
@@ -378,7 +377,7 @@
           <div class="testimonial__items__wrapper">
             <div class="testimonial__item">
               <div class="testimonial__item__img">
-                <img src="./images/testimonial_img1.png" alt="Sayed Ahmed" />
+                <img src="./images/testimonial_img1.png" alt="Chirag Valand" />
               </div>
               <div class="testimonial__item__info">
                 <h3 class="testimonial__item__name">Chirag Valand</h3>
@@ -394,7 +393,7 @@
             </div>
             <div class="testimonial__item">
               <div class="testimonial__item__img">
-                <img src="./images/testimonial_img1.png" alt="Sayed Ahmed" />
+                <img src="./images/testimonial_img1.png" alt="Chirag Valand" />
               </div>
               <div class="testimonial__item__info">
                 <h3 class="testimonial__item__name">Neel</h3>
@@ -410,7 +409,7 @@
             </div>
             <div class="testimonial__item">
               <div class="testimonial__item__img">
-                <img src="./images/testimonial_img1.png" alt="Sayed Ahmed" />
+                <img src="./images/testimonial_img1.png" alt="Chirag Valand" />
               </div>
               <div class="testimonial__item__info">
                 <h3 class="testimonial__item__name">Kaushal & Nishat</h3>
@@ -427,7 +426,7 @@
             </div>
             <div class="testimonial__item">
               <div class="testimonial__item__img">
-                <img src="./images/testimonial_img1.png" alt="Sayed Ahmed" />
+                <img src="./images/testimonial_img1.png" alt="Chirag Valand" />
               </div>
               <div class="testimonial__item__info">
                 <h3 class="testimonial__item__name">Snehal</h3>
@@ -555,7 +554,7 @@
             <h3 class="footer__text__title">Links</h3>
             <ol class="footer__text">
               <li>
-                <a href="/index.html">Home</a>
+                <a href="./index.html">Home</a>
               </li>
               <li>
                 <a href="./menu.html">Menu</a>
@@ -578,13 +577,13 @@
             <h3 class="footer__text__title">Support</h3>
             <ol class="footer__text">
               <li>
-                <a href="#">Contact</a>
+                <a href="./contact.html">Contact</a>
               </li>
               <li>
-                <a href="#">Support Center</a>
+                <a href="./support.html">Support Center</a>
               </li>
               <li>
-                <a href="#">Feedback</a>
+                <a href="./feedback.html">Feedback</a>
               </li>
             </ol>
           </div>
